fix: slider gap to responsive

--- a/shelter/assets/pages/pets/styles.css
+++ b/shelter/assets/pages/pets/styles.css
@@ -596,11 +596,12 @@ html {
   list-style: none;
   transition: 0.3s;
   transform: translateX(0);
-  gap: 30px 40px;
+  gap: 30px calc((100% - 1080px) / 3);
 }
 @media (max-width: 1279px) {
   .slider__body {
     max-height: 1365px;
+    gap: 30px 40px;
   }
 }
 
